appId: app.keurzen.mobile
---
- launchApp

- extendedWaitUntil:
    visible: "Bon retour !"
    timeout: 30000

- tapOn: "vous@exemple.fr"
- inputText: "inexistant@keurzen.test"

- tapOn: "Continuer"

- extendedWaitUntil:
    visible: "Aucun compte trouvé avec cette adresse."
    timeout: 10000
